(lang dune 3.7)

(name inquirer_oc)

(generate_opam_files true)

(source
 (github araera111/inquirer_oc))

(authors "Ou Fumio")

(maintainers "Ou Fumio")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name inquirer_oc)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
